--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,32 @@
+click==8.2.0
+contourpy==1.3.2
+cycler==0.12.1
+DateTime==5.5
 Flask==2.2.3
-Werkzeug==2.2.3
-pymysql==1.0.3
-python-dateutil==2.8.2
-regex==2023.3.23
-mysql-connector-python==8.0.33
-sqlalchemy==2.0.15
-python-dotenv==1.0.0
-pandas
+fonttools==4.58.0
+greenlet==3.2.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
 matplotlib==3.8.4
+mysql-connector-python==8.0.33
+numpy==2.2.5
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
+protobuf==3.20.3
+PyMySQL==1.0.3
+pyparsing==3.2.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2025.2
+regex==2023.3.23
+setuptools==80.7.1
+six==1.17.0
+SQLAlchemy==2.0.15
+typing_extensions==4.13.2
+tzdata==2025.2
+Werkzeug==2.2.3
+XlsxWriter==3.2.3
+zope.interface==7.2
